# fgxmlset

./: CMakeLists.txt  LICENSE.txt  README.md  config.h.cmake
build.x64/: .gitignore  build-me.bat  instexe.bat  run-test.bat
cmake/: FindLibXml2.cmake  FindSimGear.cmake  FindZLIB.cmake
src/: fgxml-scraps.cxx  fgxmlset.cxx  fgxmlset.hxx  reader1.c
src/utils/: gen_utils.cxx  gen_utils.hxx  sprtf.cxx  sprtf.hxx
